tests/snapshots/element__it_can_clone_node.snap
---
source: tests/element.rs
expression: one
---
{
  "name": "div",
  "variant": "normal",
  "children": [
    "one"
  ]
}
