tests/snapshots/element__it_can_parse_broken_html.snap
---
source: tests/element.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    "<div>",
    {
      "name": "div",
      "variant": "normal"
    }
  ]
}
