tests/snapshots/element__it_can_parse_deeply_nested.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "element": {
        "name": "div",
        "variant": "normal",
        "attributes": {
          "class": "1"
        },
        "nodes": [
          {
            "element": {
              "name": "div",
              "variant": "normal",
              "attributes": {
                "class": "1"
              },
              "nodes": [
                {
                  "element": {
                    "name": "div",
                    "variant": "normal",
                    "attributes": {
                      "class": "1"
                    },
                    "nodes": [
                      {
                        "element": {
                          "name": "div",
                          "variant": "normal",
                          "attributes": {
                            "class": "1"
                          },
                          "nodes": [
                            {
                              "element": {
                                "name": "div",
                                "variant": "normal",
                                "attributes": {
                                  "class": "1"
                                },
                                "nodes": [
                                  {
                                    "element": {
                                      "name": "div",
                                      "variant": "normal",
                                      "attributes": {
                                        "class": "1"
                                      },
                                      "nodes": [
                                        {
                                          "element": {
                                            "name": "div",
                                            "variant": "normal",
                                            "attributes": {
                                              "class": "1"
                                            },
                                            "nodes": [
                                              {
                                                "element": {
                                                  "name": "div",
                                                  "variant": "normal",
                                                  "attributes": {
                                                    "class": "1"
                                                  },
                                                  "nodes": [
                                                    {
                                                      "text": "hello world"
                                                    }
                                                  ]
                                                }
                                              }
                                            ]
                                          }
                                        }
                                      ]
                                    }
                                  }
                                ]
                              }
                            }
                          ]
                        }
                      }
                    ]
                  }
                }
              ]
            }
          }
        ]
      }
    }
  ]
}
