tests/snapshots/element__it_can_parse_multiple_elements.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "element": {
        "id": null,
        "name": "div",
        "variant": "void",
        "attributes": {},
        "classes": [],
        "nodes": []
      }
    },
    {
      "element": {
        "id": null,
        "name": "div",
        "variant": "void",
        "attributes": {},
        "classes": [],
        "nodes": []
      }
    }
  ]
}
