tests/snapshots/element__it_can_parse_multiple_open_elements.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "element": {
        "id": null,
        "name": "div",
        "variant": "normal",
        "attributes": {},
        "classes": [],
        "nodes": []
      }
    },
    {
      "element": {
        "id": null,
        "name": "div",
        "variant": "normal",
        "attributes": {},
        "classes": [],
        "nodes": []
      }
    }
  ]
}
