tests/snapshots/element__it_can_parse_nested_elements.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "element": {
        "name": "div",
        "variant": "normal",
        "attributes": {},
        "nodes": [
          {
            "element": {
              "name": "div",
              "variant": "void",
              "attributes": {},
              "nodes": []
            }
          }
        ]
      }
    }
  ]
}
