tests/snapshots/element__it_can_parse_nested_elements_mixed_children.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "name": "div",
      "variant": "normal",
      "nodes": [
        {
          "name": "div",
          "variant": "void"
        },
        "Hello",
        {
          "name": "div",
          "variant": "normal",
          "nodes": [
            "World"
          ]
        }
      ]
    }
  ]
}
