tests/snapshots/element__it_can_parse_one_element.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "document",
  "nodes": [
    {
      "element": {
        "name": "html",
        "variant": "normal",
        "attributes": {},
        "nodes": []
      }
    }
  ]
}
