tests/snapshots/element__it_can_parse_one_element_mixed_case.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "document",
  "nodes": [
    {
      "element": {
        "name": "Html",
        "variant": "normal",
        "attributes": {},
        "nodes": []
      }
    }
  ]
}
