tests/snapshots/element__it_can_parse_one_element_mixed_case_numbers.snap
---
source: tests/element.rs
expression: ast
---
Ast {
    tree_type: DocumentFragment,
    nodes: [
        Element(
            Element {
                name: "Header1",
                variant: Normal,
                attributes: {},
                nodes: [],
            },
        ),
    ],
}
