tests/snapshots/element__it_can_parse_one_element_mixed_case_numbers_symbols.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "name": "Head_Er-1",
      "variant": "normal"
    }
  ]
}
