tests/snapshots/element__it_can_parse_one_element_upper_case.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "document",
  "nodes": [
    {
      "element": {
        "name": "HTML",
        "variant": "normal",
        "attributes": {},
        "nodes": []
      }
    }
  ]
}
